Adjust background clip when local attachment is used with non-visible overflow.

BUG=625882
TEST=compositing/backgrounds/local-background.html

Review-Url: https://codereview.chromium.org/2127663002
Cr-Commit-Position: refs/heads/master@{#407871}

Former-commit-id: e3a98dc7050d4e575967177edaca49742024e8c8